src/objects/SynchronizeToBanner__c.object
<CustomObject>
    <description>Represents a change to CAREforce data that requires update to or from Banner or other external systems.</description>
    <fields>
        <fullName>ActiveOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>CARE_Syncs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address1Out__c</fullName>
        <formula>trim(IF(FIND(&apos;;&apos;, ActiveOpportunity__r.StudentContact__r.MailingStreet) &gt; 0, mid(ActiveOpportunity__r.StudentContact__r.MailingStreet,  0, FIND(&apos;;&apos;, ActiveOpportunity__r.StudentContact__r.MailingStreet) - 1),
IF(LEN(ActiveOpportunity__r.StudentContact__r.MailingStreet) &gt; 30 , mid(ActiveOpportunity__r.StudentContact__r.MailingStreet, 0, 30), ActiveOpportunity__r.StudentContact__r.MailingStreet)))</formula>
        <label>Address 1 (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2Out__c</fullName>
        <formula>trim(IF(FIND(&apos;;&apos;, ActiveOpportunity__r.StudentContact__r.MailingStreet) &gt; 0, mid(ActiveOpportunity__r.StudentContact__r.MailingStreet, FIND(&apos;;&apos;, ActiveOpportunity__r.StudentContact__r.MailingStreet) + 1, 30),
IF(LEN(ActiveOpportunity__r.StudentContact__r.MailingStreet) &gt; 30 , mid(ActiveOpportunity__r.StudentContact__r.MailingStreet, 31, 30), &apos;&apos;)))</formula>
        <label>Address 2 (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationFeeOut__c</fullName>
        <formula>ActiveOpportunity__r.ApplicationFeeAmount__c</formula>
        <label>Application Fee (Out)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApplicationPinOut__c</fullName>
        <formula>TEXT(ActiveOpportunity__r.ApplicationPin__c)</formula>
        <label>Application Pin (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BachelorsDegreeOut__c</fullName>
        <formula>if(ActiveOpportunity__r.BachelorsDegree__c, &apos;Y&apos;, &apos;N&apos;)</formula>
        <label>Bachelors Degree (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BannerIdIn__c</fullName>
        <label>Banner Id (In)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BannerIdOut__c</fullName>
        <formula>ActiveOpportunity__r.StudentContact__r.StudentID__c</formula>
        <label>Banner Id (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAREStatusOut__c</fullName>
        <formula>ActiveOpportunity__r.CAREStatusListView__c</formula>
        <label>CARE Status (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampusCodeOut__c</fullName>
        <formula>text(ActiveOpportunity__r.StudentAttributes__r.Affiliation__c)</formula>
        <label>Campus Code (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CitizenshipOut__c</fullName>
        <formula>text(ActiveOpportunity__r.StudentAttributes__r.CitizenshipStatus__c)</formula>
        <label>Citizenship (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityOut__c</fullName>
        <formula>ActiveOpportunity__r.StudentContact__r.MailingCity</formula>
        <label>City (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityTypeOut__c</fullName>
        <formula>text(ActiveOpportunity__r.StudentAttributes__r.CommunityType__c)</formula>
        <label>Community Type (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactReference__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +  ActiveOpportunity__r.StudentContact__c,  ActiveOpportunity__r.StudentContact__r.FirstName  + &apos; &apos; +  ActiveOpportunity__r.StudentContact__r.LastName)</formula>
        <label>Contact Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryOut__c</fullName>
        <formula>ActiveOpportunity__r.StudentContact__r.MailingCountry</formula>
        <label>Country (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentStatus__c</fullName>
        <formula>IF(ActiveOpportunity__r.RecordTypeId = &apos;012a0000001ZRQV&apos;, &apos;Returning Graduate&apos;,
IF(OR(ISNULL(ActiveOpportunity__r.StudentContact__c), ISBLANK(ActiveOpportunity__r.StudentContact__c)), &apos;Error: No Contact Assigned&apos;,
IF(OR(ISPICKVAL(ActiveOpportunity__r.StudentContact__r.Status__c, &apos;IG&apos;), ISPICKVAL(ActiveOpportunity__r.StudentContact__r.Status__c, &apos;DR&apos;), ISPICKVAL(ActiveOpportunity__r.StudentContact__r.Status__c, &apos;TB&apos;), AND(ISPICKVAL(ActiveOpportunity__r.StudentContact__r.Status__c, &apos;AS&apos;), NOT(ActiveOpportunity__r.CAREStatusListView__c = &apos;NEVR&apos;), NOT(ActiveOpportunity__r.CAREStatusListView__c = &apos;INTV&apos;), NOT(ActiveOpportunity__r.CAREStatusListView__c = &apos;CLRD&apos;))), &apos;Returning Prospect&apos;, 
IF(AND(NOT(OR(ISNULL(SynchronizationError__c), ISBLANK(SynchronizationError__c), SynchronizationError__c = &apos;None&apos;)), ResynchronizeToBanner__c = false), &apos;Error&apos;, 

IF( 
OR(ActiveOpportunity__r.CAREStatusListView__c = &apos;APAC&apos;, ActiveOpportunity__r.CAREStatusListView__c = &apos;REDI&apos;, ActiveOpportunity__r.CAREStatusListView__c = &apos;NAMT&apos;, ActiveOpportunity__r.CAREStatusListView__c = &apos;ADMT&apos;, ActiveOpportunity__r.CAREStatusListView__c = &apos;INTV&apos;, ActiveOpportunity__r.CAREStatusListView__c = &apos;CLRD&apos;, ActiveOpportunity__r.CAREStatusListView__c = &apos;NEVR&apos;), 
IF( 
OR(ISNULL(PIDMOut__c), PIDMOut__c = &apos;&apos;), &apos;Insert&apos;, 
IF(OR(ISNULL(LastSynchronizedIn__c), ActiveOpportunity__r.LastModifiedDate &gt; LastSynchronizedIn__c, ActiveOpportunity__r.StudentContact__r.LastModifiedDate &gt; LastSynchronizedIn__c, ActiveOpportunity__r.StudentAttributes__r.LastModifiedDate &gt; LastSynchronizedIn__c), &apos;Update&apos;, &apos;Current&apos;) 
), &apos;Ignore&apos;) 
) 
)
))</formula>
        <label>Current Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountAmountOut__c</fullName>
        <formula>ActiveOpportunity__r.DiscountAmount__c</formula>
        <label>Discount Amount (Out)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EmailOut__c</fullName>
        <formula>ActiveOpportunity__r.StudentContact__r.OtherEmail__c</formula>
        <label>Email (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployerOut__c</fullName>
        <formula>If(isnull(ActiveOpportunity__r.StudentEmploymentHistory__r.Employer__c), ActiveOpportunity__r.StudentEmploymentHistory__r.OtherEmployer__c, ActiveOpportunity__r.StudentEmploymentHistory__r.Employer__r.Name)</formula>
        <label>Employer (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmploymentStatusOut__c</fullName>
        <formula>TEXT(ActiveOpportunity__r.EmploymentStatus__c)</formula>
        <label>Employment Status (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnglishIsNativeLanguageOut__c</fullName>
        <formula>IF(ActiveOpportunity__r.NativeLanguageIsEnglish__c, &apos;Y&apos;, &apos;N&apos;)</formula>
        <label>English Is Native Language (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpectedStartDateOut__c</fullName>
        <formula>ActiveOpportunity__r.CloseDate</formula>
        <label>Expected Start Date (Out)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinAidOut__c</fullName>
        <formula>IF(ActiveOpportunity__r.LearnAboutFinancialAid__c, &apos;Y&apos;, &apos;N&apos;)</formula>
        <label>Fin Aid (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstNameOut__c</fullName>
        <formula>ActiveOpportunity__r.StudentContact__r.FirstName</formula>
        <label>First Name (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GenderOut__c</fullName>
        <formula>TEXT(ActiveOpportunity__r.StudentContact__r.Gender__c)</formula>
        <label>Gender (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HighschoolEducationOut__c</fullName>
        <formula>IF(ActiveOpportunity__r.GraduatedHighSchool__c, &apos;Y&apos;, &apos;N&apos;)</formula>
        <label>Highschool Education (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HouseholdIncomeOut__c</fullName>
        <formula>TEXT(ActiveOpportunity__r.StudentEmploymentHistory__r.AnnualIncome__c)</formula>
        <label>Household Income (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntakeInterviewUserPidmOut__c</fullName>
        <formula>ActiveOpportunity__r.IntakeBy__c</formula>
        <label>Intake Interview User Pidm (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternationalPhoneOut__c</fullName>
        <formula>ActiveOpportunity__r.StudentContact__r.InternationalPhone__c</formula>
        <label>International Phone (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastNameOut__c</fullName>
        <formula>ActiveOpportunity__r.StudentContact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastSynchronizedIn__c</fullName>
        <label>Last Synchronized (In)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MajorOfInterestOut__c</fullName>
        <formula>ActiveOpportunity__r.MarketingProgram__r.BannerProgramCode__r.Name</formula>
        <label>Major Of Interest (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritalStatusout__c</fullName>
        <formula>TEXT(ActiveOpportunity__r.StudentAttributes__r.MaritalStatus__c)</formula>
        <label>Marital Status (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MergeAccountFrom__c</fullName>
        <formula>IF(
  CONTAINS(SynchronizationError__c, &apos;DUPLICATE_VALUE, duplicate value found: PIDM__c&apos;),
  MID(SynchronizationError__c, 49, 18),
  &apos;&apos;
)</formula>
        <label>Merge Account From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MergeAccountTo__c</fullName>
        <formula>IF( 
CONTAINS(SynchronizationError__c, &apos;DUPLICATE_VALUE, duplicate value found: PIDM__c&apos;), 
MID(SynchronizationError__c, 166, 15), 
&apos;&apos; 
)</formula>
        <label>Merge Account To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleInitialOut__c</fullName>
        <formula>ActiveOpportunity__r.StudentContact__r.middleInitial__c</formula>
        <label>Middle Initial (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MilitaryStatusOut__c</fullName>
        <formula>TEXT(ActiveOpportunity__r.StudentAttributes__r.MilitaryStatus__c)</formula>
        <label>Military Status (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NickNameOut__c</fullName>
        <formula>ActiveOpportunity__r.StudentAttributes__r.Nickname__c</formula>
        <label>Nick Name (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginallyPushedToBannerIn__c</fullName>
        <inlineHelpText>Indicator to determine when this record was first pushed to banner. If null and PIDM null, then record needs first time push.</inlineHelpText>
        <label>Originally Pushed To Banner (In)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PIDMIn__c</fullName>
        <label>PIDM (In)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIDMOut__c</fullName>
        <formula>ActiveOpportunity__r.StudentContact__r.PIDM__c</formula>
        <label>PIDM (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentsAttendedCollegeOut__c</fullName>
        <formula>IF(TEXT(ActiveOpportunity__r.StudentAttributes__r.ParentsAttendedACollegeOrUniversity__c) = &apos;Yes&apos;, &apos;Y&apos;, &apos;N&apos;)</formula>
        <label>Parents Attended College (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentsGraduatedCollegeOut__c</fullName>
        <formula>IF(TEXT( ActiveOpportunity__r.StudentAttributes__r.ParentsGraduated__c) = &apos;Yes&apos;, &apos;Y&apos;, &apos;N&apos;)</formula>
        <label>Parents Graduated College (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentTypeOut__c</fullName>
        <formula>TEXT(ActiveOpportunity__r.PaymentType__c)</formula>
        <label>Payment Type (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneAreaCodeOut__c</fullName>
        <formula>IF(OR(ISNULL(ActiveOpportunity__r.StudentContact__r.HomePhone), ISBLANK(ActiveOpportunity__r.StudentContact__r.HomePhone)),
IF(CONTAINS(ActiveOpportunity__r.Account.Phone, &apos;(&apos;), MID(ActiveOpportunity__r.Account.Phone, 2, 3), MID(ActiveOpportunity__r.Account.Phone, 1, 3)),
IF(CONTAINS(ActiveOpportunity__r.StudentContact__r.HomePhone, &apos;(&apos;), MID(ActiveOpportunity__r.StudentContact__r.HomePhone, 2, 3), MID(ActiveOpportunity__r.StudentContact__r.HomePhone, 1, 3)))</formula>
        <label>Phone Area Code (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneExtensionOut__c</fullName>
        <formula>ActiveOpportunity__r.StudentContact__r.PhoneExtension__c</formula>
        <label>Phone Extension (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneOut__c</fullName>
        <formula>IF (MID(ActiveOpportunity__r.StudentContact__r.HomePhone, 4, 1) = &apos;-&apos;, MID(ActiveOpportunity__r.StudentContact__r.HomePhone, 5, 3) + MID(ActiveOpportunity__r.StudentContact__r.HomePhone, 9, 4),
IF(OR(ISNULL(ActiveOpportunity__r.StudentContact__r.HomePhone), ISBLANK(ActiveOpportunity__r.StudentContact__r.HomePhone)),
IF(CONTAINS(ActiveOpportunity__r.Account.Phone, &apos;(&apos;), MID(ActiveOpportunity__r.Account.Phone, 7, 3) + MID(ActiveOpportunity__r.Account.Phone, 11, 4), MID(ActiveOpportunity__r.Account.Phone, 5, 3) + MID(ActiveOpportunity__r.Account.Phone, 10, 4)),
IF(CONTAINS(ActiveOpportunity__r.StudentContact__r.HomePhone, &apos;(&apos;), MID(ActiveOpportunity__r.StudentContact__r.HomePhone, 7, 3) + MID(ActiveOpportunity__r.StudentContact__r.HomePhone, 11, 4), MID(ActiveOpportunity__r.StudentContact__r.HomePhone, 5, 3) + MID(ActiveOpportunity__r.StudentContact__r.HomePhone, 10, 4))))</formula>
        <label>Phone (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrefixOut__c</fullName>
        <formula>TEXT(ActiveOpportunity__r.StudentContact__r.Salutation)</formula>
        <label>Prefix (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessedCommunitiesRoll__c</fullName>
        <label>Processed Communities Roll</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProcessedEWBRoll__c</fullName>
        <label>Processed EWB Roll</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PromotionCodeOut__c</fullName>
        <formula>ActiveOpportunity__r.AffiliateCode__c</formula>
        <label>Promotion Code (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReSynchronizeInSalesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resynchronize In Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResynchronizeToBanner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resynchronize To Banner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StateOut__c</fullName>
        <formula>ActiveOpportunity__r.StudentContact__r.MailingState</formula>
        <label>State (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuffixOut__c</fullName>
        <formula>ActiveOpportunity__r.StudentContact__r.Suffix__c</formula>
        <label>Suffix (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SynchronizationError__c</fullName>
        <label>Synchronization Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToeflScoreOut__c</fullName>
        <formula>ActiveOpportunity__r.TOEFL__c</formula>
        <label>Toefl Score (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsernameOut__c</fullName>
        <formula>ActiveOpportunity__r.WGUUsername__c</formula>
        <label>Username (Out)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGUEmailIn__c</fullName>
        <label>WGU Email (In)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipcodeOut__c</fullName>
        <formula>ActiveOpportunity__r.StudentContact__r.MailingPostalCode</formula>
        <label>Zipcode (Out)</label>
        <type>Text</type>
    </fields>
    <label>Synchronize To Banner</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Errors</fullName>
        <columns>NAME</columns>
        <columns>CAREStatusOut__c</columns>
        <columns>PIDMOut__c</columns>
        <columns>LastSynchronizedIn__c</columns>
        <columns>SynchronizationError__c</columns>
        <columns>ReSynchronizeInSalesforce__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CurrentStatus__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>All Errors</label>
        <sharedTo>
            <role>IT_Group</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DuplicateContact</fullName>
        <columns>NAME</columns>
        <columns>ActiveOpportunity__c</columns>
        <columns>CAREStatusOut__c</columns>
        <columns>PIDMOut__c</columns>
        <columns>LastSynchronizedIn__c</columns>
        <columns>SynchronizationError__c</columns>
        <columns>ReSynchronizeInSalesforce__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SynchronizationError__c</field>
            <operation>contains</operation>
            <value>Update failed. First exception on row</value>
        </filters>
        <label>Duplicate Contact</label>
        <sharedTo>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FatalCurriculum</fullName>
        <columns>NAME</columns>
        <columns>CAREStatusOut__c</columns>
        <columns>PIDMOut__c</columns>
        <columns>LastSynchronizedIn__c</columns>
        <columns>SynchronizationError__c</columns>
        <columns>ReSynchronizeInSalesforce__c</columns>
        <columns>ResynchronizeToBanner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CurrentStatus__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <filters>
            <field>SynchronizationError__c</field>
            <operation>contains</operation>
            <value>Fatal: Curriculum</value>
        </filters>
        <label>Fatal: Curriculum</label>
        <sharedTo>
            <role>IT_Group</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Insert</fullName>
        <columns>NAME</columns>
        <columns>CurrentStatus__c</columns>
        <columns>SynchronizationError__c</columns>
        <columns>BannerIdIn__c</columns>
        <columns>ReSynchronizeInSalesforce__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BannerIdIn__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CurrentStatus__c</field>
            <operation>equals</operation>
            <value>insert</value>
        </filters>
        <label>Insert</label>
        <sharedTo>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>No_Student_Contact</fullName>
        <columns>ActiveOpportunity__c</columns>
        <columns>NAME</columns>
        <columns>CurrentStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CurrentStatus__c</field>
            <operation>equals</operation>
            <value>Error: No Contact Assigned</value>
        </filters>
        <label>No Student Contact on Opportunity</label>
        <sharedTo>
            <role>IT_Group</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Unassigned</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>CurrentStatus__c</columns>
        <columns>SynchronizationError__c</columns>
        <columns>BannerIdIn__c</columns>
        <columns>ReSynchronizeInSalesforce__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ContactReference__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>SynchronizationError__c</field>
            <operation>notEqual</operation>
            <value>Current</value>
        </filters>
        <filters>
            <field>SynchronizationError__c</field>
            <operation>notEqual</operation>
            <value>Returning Prospect</value>
        </filters>
        <filters>
            <field>SynchronizationError__c</field>
            <operation>notEqual</operation>
            <value>Update</value>
        </filters>
        <filters>
            <field>SynchronizationError__c</field>
            <operation>notEqual</operation>
            <value>Ignore</value>
        </filters>
        <label>Unassigned</label>
        <sharedTo>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Synchronization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Synchronizations To Banner</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>